--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 click==8.1.2
 Flask==2.1.1
+Flask-WTF==1.0.1
 gunicorn==20.1.0
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
 MarkupSafe==2.1.1
+psycopg2==2.9.3
+python-dotenv==0.20.0
 Werkzeug==2.1.1
+WTForms==3.0.1
 zipp==3.7.0
